--- a/PersolEmployeeTracking.WPF/PermissionPage.xaml
+++ b/PersolEmployeeTracking.WPF/PermissionPage.xaml
@@ -5,8 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersolEmployeeTracking.WPF"
         mc:Ignorable="d"
-        Title="PermissionPage" Height="450" Width="800">
+        Title="PermissionPage" Background="CornflowerBlue" ResizeMode="NoResize" 
+        FontWeight="Bold" Icon="Images/Logo.png" WindowStartupLocation="CenterScreen" 
+        FontSize="18" Height="450" Width="450" Loaded="Window_Loaded">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Label Content="User No" Height="34" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtUserNo" IsEnabled="False" Grid.Column="1" Height="26" Margin="0,0,30,0"/>
+        <Label Content="Start Date" Height="34" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <DatePicker Name="dpStart" Grid.Column="1" Grid.Row="1" SelectedDateChanged="dpStart_SelectedDateChanged" />
+        <Label Content="End Date" Height="34" Grid.Row="2" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <DatePicker Name="dpEnd" Grid.Column="1" Grid.Row="2" SelectedDateChanged="dpEnd_SelectedDateChanged" />
+        <Label Content="Day Amount" Height="34" Grid.Row="3" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtDayAmount" IsEnabled="False" Grid.Row="3" Grid.Column="1" Height="26" Margin="0,0,30,0"/>
+        <Label Content="Explnation" Height="34" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="4"/>
+        <TextBox x:Name="txtExplanation" Grid.Row="4" Grid.RowSpan="2" Grid.Column="1" Margin="0,0,30,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Grid Grid.Row="7" Grid.ColumnSpan="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button x:Name="btnSave" Content="Save" Grid.Row="7" HorizontalAlignment="Right" Margin="0,0,0,0" Width="140" Click="btnSave_Click"/>
+            <Button x:Name="btnClose" Content="Close" Grid.Row="7" HorizontalAlignment="Center" Margin="0,0,0,0" Width="140" Grid.Column="1" Click="btnClose_Click"/>
+        </Grid>
     </Grid>
 </Window>
