--- a/PersolEmployeeTracking.WPF/PositionPage.xaml
+++ b/PersolEmployeeTracking.WPF/PositionPage.xaml
@@ -5,8 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersolEmployeeTracking.WPF"
         mc:Ignorable="d"
-        Title="PositionPage" Height="450" Width="800">
+        Title="PositionPage" Height="200" Width="350" Background="CornflowerBlue" 
+        Icon="Images/Logo.png" FontSize="18" FontWeight="Bold" 
+        WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Label Content="Department" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Label Content="Position Name" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <ComboBox Name="cmbDepartment" Grid.Column="1" Width="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtPositionname" Grid.Row="1" Grid.Column="1" Width="150" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Button x:Name="btnSave" Content="Save" Grid.Row="2" Margin="50,0,0,0" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Click="btnSave_Click"/>
+        <Button x:Name="btnClose" Content="Close" Grid.Column="1" Grid.Row="2" Width="100" Margin="0,0,50,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="btnClose_Click"/>
+
     </Grid>
 </Window>
