--- a/PersolEmployeeTracking.WPF/MainWindow.xaml
+++ b/PersolEmployeeTracking.WPF/MainWindow.xaml
@@ -27,7 +27,7 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <!--<Image Source="Images/Logo.png" />-->
+        <Image Source="Persol.png" />
         <ContentControl Content="{Binding}" Grid.Column="1" Grid.Row="1" Grid.RowSpan="8" Height="Auto" FontWeight="Normal" Width="Auto"/>
         <Label x:Name="lblWindowName" Content="Windows Name" Grid.Column="1" HorizontalAlignment="Center" Margin="212,10,0,0" VerticalAlignment="Top" FontSize="24"/>
         <StackPanel Grid.Row="1" Margin="0,2,0,0">
